--- a/about/index.html
+++ b/about/index.html
@@ -13,8 +13,7 @@
 
       <div id="header">
         <p>
-          &nbsp;&nbsp;<a href="/">~/</a>&nbsp;&nbsp;
-          <a href="/about">ABOUT</a>&nbsp;&nbsp;
+          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
           <a href="/blog">BLOG</a>&nbsp;&nbsp;
           <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
           <a href="/contact">CONTACT</a>&nbsp;&nbsp;
@@ -27,27 +26,6 @@
           <p>wildefyr | grep 'about'</p>
         </div>
 
-        <div id="wrapperArcticleGreen">
-
-          <p> Who am I? </p>
-
-          <p>
-          A person who cares about open source software and likes to tinker
-          around with Linux + other stuff. My distribution of choice for now
-          is <a href="https://archlinux.org/">Arch Linux</a>. While other
-          people have written countless blog posts on why they use it, for me
-          it can be summed up simply by saying it's the right balance between
-          minimalism and usability.
-          </p>
-
-          <p>
-          I'm also currently at university studying Computer Science!
-          </p>
-
-        </div>
-
-        <div id="wrapperTitleBlue">
-          <p>Current Software:</p>
         </div>
 
         <div id="wrapperArcticleBlue">
