--- a/contact/index.html
+++ b/contact/index.html
@@ -13,8 +13,7 @@
 
       <div id="header">
         <p>
-          &nbsp;&nbsp;<a href="/">~/</a>&nbsp;&nbsp;
-          <a href="/about">ABOUT</a>&nbsp;&nbsp;
+          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
           <a href="/blog">BLOG</a>&nbsp;&nbsp;
           <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
           <a href="/contact">CONTACT</a>&nbsp;&nbsp;
@@ -36,7 +35,7 @@
 
           <ul>
             <li>IRC: <a href="http://webchat.freenode.net">Freenode</a>: #crux, #6c37, #osdev </li>
-            <li>Reddit: <a href="https://reddit.com/u/Fireblasto">/u/fireblasto</a></li>
+            <li>Reddit: <a href="https://reddit.com/u/wildefyr">/u/wildefyr</a></li>
             <li>Email: wildefur@gmail.com</li>
           </ul>
 
