--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>wildefyr | awk '/index.html/ {print $0}</title>
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/wildefyr.css">
-        <meta charset=UTF-8>
+    <meta charset=UTF-8>
   </head>
 
   <body>
@@ -13,8 +13,7 @@
 
       <div id="header">
         <p>
-          &nbsp;&nbsp;<a href="/">~/</a>&nbsp;&nbsp;
-          <a href="/about">ABOUT</a>&nbsp;&nbsp;
+          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
           <a href="/blog">BLOG</a>&nbsp;&nbsp;
           <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
           <a href="/contact">CONTACT</a>&nbsp;&nbsp;
@@ -31,13 +30,10 @@
 
           <p>
           Welcome to my {personal} website. Enjoy your stay.
-          <br>
-          <br>
-          For optimal viewing expierence, if using a linux machine and
-          firefox, would be to install <a
-             href="https://github.com/phallus/fonts">lemon</a> and set it as
-           the monospace font.
           </p>
+
+          <p>
+
 
         </div>
       </div>
