Begin site overhaul.

--- a/index.html
+++ b/index.html
@@ -2,45 +2,47 @@
 <html lang="en">
 
   <head>
-    <title>wildefyr | awk '/index.html/ {print $0}</title>
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="stylesheet" title="mainStyle" href = "/wildefyr.css">
+    <title>wildefyr.net</title>
+    <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
+    <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset=UTF-8>
   </head>
 
   <body>
-    <div id="container">
 
-      <div id="header">
-        <p>
-          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
-          <a href="/blog">BLOG</a>&nbsp;&nbsp;
-          <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
-          <a href="/contact">CONTACT</a>&nbsp;&nbsp;
-        </p>
-      </div>
+  <div id="wrap">
 
-      <div id="body">
+    <div id="header">
+      <h3>
+        &nbsp;&nbsp;&nbsp;<a href="/">HOME</a>&nbsp;&nbsp;&nbsp;
+        <a href="/blog">BLOG</a>&nbsp;&nbsp;&nbsp;
+        <a href="/media">MEDIA</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;&nbsp;
+        <a href="/contact">CONTACT</a>&nbsp;&nbsp;&nbsp;
+      </h3>
+    </div>
 
-        <div id="wrapperTitle">
-          <p>wildefyr | awk '/index.html/ {print $0}'</p>
-        </div>
+    <div id="content">
 
-        <div id="wrapperArcticleGreen">
-
-          <p>
-          Welcome to my {personal} website. Enjoy your stay.
-          </p>
-
-          <p>
-
-
+      <div id="arcticleTitle">
+        <div id="textWrap">
+          <h1>wildefyr.net</h1>
         </div>
       </div>
 
-      <div id="footer">
+      <div id="arcticleWhite">
+        <div id="textWrap">
+          <p>Welcome to my {personal} website. Enjoy your stay.</p>
+        </div>
       </div>
 
     </div>
+
+  </div>
+
+  <div id="footer">
+  </div>
+
   </body>
 </html>
