--- a/start/index.html
+++ b/start/index.html
@@ -2,60 +2,51 @@
 <html lang="en">
 
   <head>
-    <title>wildefyr && Start</title>
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="stylesheet" title="startPageCSS" href = "/wildefyr.css">
-    <meta charset=UTF-7>
+    <title>wildefyr.net</title>
+    <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
+    <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
+    <meta charset=UTF-8>
   </head>
 
   <body>
-    <div id="container">
 
-      <div id="header">
-        <p>
-          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
-          <a href="/blog">BLOG</a>&nbsp;&nbsp;
-          <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
-          <a href="/contact">CONTACT</a>&nbsp;&nbsp;
-        </p>
-      </div>
+    <div id="wrap">
 
-      <div id="body">
-
-        <div id="wrapperTitle">
-          <p>wildefyr && Start</p>
-        </div>
-
-        <div id="startOne">
-          <a href="https://reddit.com/message/inbox">inbox</a>&nbsp;\\
-          <a href="https://reddit.com/r/i3wm">/r/i3wm</a>&nbsp;\\
-          <a href="https://reddit.com/r/vim">/r/vim</a>&nbsp;\\
-          <a href="https://reddit.com/r/linux">/r/linux</a>&nbsp;\\
-          <a href="https://reddit.com/r/linux_gaming">/r/linuxgaming</a>&nbsp;\\
-          <a href="http://nixers.net">/r/n1nixers</a>&nbsp;\\
-          <a href="https://reddit.com/r/archlinux">/r/archlinux</a>&nbsp;
-          <br>
-          <a href="https://reddit.com/r/all">/r/all</a>&nbsp;\\
-          <a href="https://reddit.com/r/leagueoflegends">/r/rito</a>&nbsp;\\
-          <a href="https://reddit.com/r/editingandlayout">/r/e&l</a>&nbsp;\\
-          <a href="https://reddit.com/r/highqualitygifs">/r/hqgif</a>&nbsp;\\
-          <a href="https://reddit.com/r/MechanicalKeyboards">/r/mechanicals</a>&nbsp;\\
-          <a href="https://reddit.com/r/DaystromInstitute">/r/daystrom</a>&nbsp;\\
-          <a href="https://reddit.com/r/gallifrey">/r/gallifrey</a>&nbsp;
-        </div>
-
-        <div id="startTwo">
-          <a href="https://reddit.com">reddit</a>&nbsp;\\
-          <a href="https://news.ycombinator.com/">hackernews</a>&nbsp;\\
-          <a href="https://netflix.com">netflix</a>&nbsp;\\
-          <a href="https://facebook.com">faceache</a>&nbsp;\\
-          <a href="https://mail.google.com">mail</a>&nbsp;\\
-          <a href="https://youtube.com/feed/subscriptions">youtube</a>&nbsp;\\
-          <a href="https://drive.google.com">drive</a>&nbsp;\\
-          <a href="https://moodle.port.ac.uk">moodle</a>&nbsp;\\
-          <a href="https://github.com/wildefyr/">github</a>&nbsp;
-        </div>
-      </div>
+    <div id="header">
+      <h3>
+        &nbsp;&nbsp;&nbsp;<a href="/">HOME</a>&nbsp;&nbsp;&nbsp;
+        <a href="/blog">BLOG</a>&nbsp;&nbsp;&nbsp;
+        <a href="/media">MEDIA</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;&nbsp;
+        <a href="/contact">CONTACT</a>&nbsp;&nbsp;&nbsp;
+      </h3>
     </div>
+
+    <div id="content">
+
+      <div id="arcticleTitle">
+        <div id="textWrap">
+          <h1>wildefyr; start</h1>
+        </div>
+      </div>
+
+      <div id="startOne">
+        <div id="textWrap">
+          <li><a href="https://mail.google.com">mail</a></li>
+          <li><a href="https://drive.google.com">drive</a></li>
+          <li><a href="https://github.com/wildefyr/">github</a></li>
+          <li><a href="https://youtube.com/feed/subscriptions">youtube</a></li>
+          <li><a href="https://nixers.net">nixers.net</a></li>
+          <li><a href="https://news.ycombinator.com/">hackernews</a></li>
+        </div>
+      </div>
+
+    </div>
+
+    </div>
+
+    <div id="footer">
+    </div>
+
   </body>
 </html>
