--- a/contact/index.html
+++ b/contact/index.html
@@ -2,49 +2,53 @@
 <html lang="en">
 
   <head>
-    <title>wildefyr | sed s/contact/details/g</title>
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="stylesheet" title="mainStyle" href = "/wildefyr.css">
+    <title>wildefyr.net</title>
+    <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
+    <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset=UTF-8>
   </head>
 
   <body>
-    <div id="container">
 
-      <div id="header">
-        <p>
-          &nbsp;&nbsp;<a href="/">/</a>&nbsp;&nbsp;
-          <a href="/blog">BLOG</a>&nbsp;&nbsp;
-          <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;
-          <a href="/contact">CONTACT</a>&nbsp;&nbsp;
-        </p>
+    <div id="wrap">
+
+    <div id="header">
+      <h3>
+        &nbsp;&nbsp;&nbsp;<a href="/">HOME</a>&nbsp;&nbsp;&nbsp;
+        <a href="/blog">BLOG</a>&nbsp;&nbsp;&nbsp;
+        <a href="/media">MEDIA</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;&nbsp;
+        <a href="/contact">CONTACT</a>&nbsp;&nbsp;&nbsp;
+      </h3>
+    </div>
+
+    <div id="content">
+
+      <div id="arcticleTitle">
+        <div id="textWrap">
+          <h1>Contact Details</h1>
+        </div>
       </div>
 
-      <div id="body">
+      <div id="arcticleWhite">
+        <div id="textWrap">
 
-        <div id="wrapperTitle">
-          <p>wildefyr | sed s/contact/details/g</p>
-        </div>
-
-        <div id="wrapperArcticleGreen">
-
-          <p>
-          Want to get in touch with me? Choose your method. I recommend a
-          query on IRC as that will get my attention the fastest.
-          </p>
-
+          <p>A query on IRC will get my attention the fastest usually.</p>
           <ul>
-            <li>IRC: <a href="http://webchat.freenode.net">Freenode</a>: #crux, #6c37, #osdev </li>
-            <li>Reddit: <a href="https://reddit.com/u/wildefyr">/u/wildefyr</a></li>
+            <li>IRC: <a href="http://webchat.freenode.net">Freenode</a>, #crux, #6c37 </li>
             <li>Email: wildefur@gmail.com</li>
           </ul>
 
         </div>
       </div>
 
-      <div id="footer">
-      </div>
+    </div>
 
     </div>
+
+    <div id="footer">
+    </div>
+
   </body>
 </html>
