--- a/403.html
+++ b/403.html
@@ -34,7 +34,7 @@
         <div id="textWrap">
           <p>
           If you believe you are receiving this page in error, please contact
-          me via email at <a href="mailto:wildefur@gmail.com">wildefur@gmail.com</a>
+          me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
           </p>
         </div>
       </div>
