--- a/start/index.html
+++ b/start/index.html
@@ -5,6 +5,7 @@
     <title>wildefyr.net</title>
     <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset=UTF-8>
   </head>
 
