--- a/contact/head.html
+++ b/contact/head.html
@@ -37,18 +37,5 @@
           <p>A query on IRC will get my attention the fastest usually.</p>
           <ul>
             <li>IRC: <a href="http://webchat.freenode.net">Freenode</a>, #crux, #6c37 </li>
-            <li>Email: wildefur@gmail.com</li>
+            <li>Email: <a href="mailto:me@wildefyr.com>">me@wildefyr.net</a></li>
           </ul>
-
-        </div>
-      </div>
-
-    </div>
-
-    </div>
-
-    <div id="footer">
-    </div>
-
-  </body>
-</html>
