restructuring html pages

--- a/html/403.html
+++ b/html/403.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-
     <div id="wrap">
 
     <div id="header">
@@ -27,9 +26,24 @@
 
       <div id="arcticleTitle">
         <div id="textWrap">
-          <h1>Contact Details</h1>
+          <h1>Error 403 - Forbidden!</h1>
         </div>
       </div>
 
       <div id="arcticleWhite">
         <div id="textWrap">
+          <p>
+          If you believe you are receiving this page in error, please contact
+          me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
+          </p>
+        </div>
+      </div>
+
+    </div>
+    </div>
+
+    <div id="footer">
+    </div>
+
+  </body>
+</html>
