remove unneeded html files

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <div id="wrap">
 
+  <div id="wrap">
     <div id="header">
       <h3>
         &nbsp;&nbsp;&nbsp;<a href="/">HOME</a>&nbsp;&nbsp;&nbsp;
@@ -23,27 +23,30 @@
     </div>
 
     <div id="content">
-
       <div id="arcticleTitle">
         <div id="textWrap">
-          <h1>Error 403 - Forbidden!</h1>
+          <h1>Contact Details</h1>
         </div>
       </div>
 
       <div id="arcticleWhite">
         <div id="textWrap">
-          <p>
-          If you believe you are receiving this page in error, please contact
-          me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
-          </p>
+<p>A query on IRC will get my attention the fastest usually:</p>
+
+<ul>
+<li>IRC: <a href="http://webchat.freenode.net">Freenode</a>, #crux, #6c37</li>
+<li>Email: <a href="mailto:me@wildefyr.com">me@wildefyr.net</a></li>
+</ul>
+
+<p>I also have a teamspeak server available on this domain that I may or may not
+be on depending on the time of day.</p>
         </div>
       </div>
+    </div>
+  </div>
 
-    </div>
-    </div>
-
-    <div id="footer">
-    </div>
+  <div id="footer">
+  </div>
 
   </body>
 </html>
