title.html: include DOCTYPE

--- a/contact/title.html
+++ b/contact/title.html
@@ -1,8 +1,9 @@
-      <div id="arcticleTitle">
-        <div id="textWrap">
-          <h1>Contact Details</h1>
-        </div>
-      </div>
+<!DOCTYPE html>
+<div id="arcticleTitle">
+  <div id="textWrap">
+    <h1>Contact Details</h1>
+  </div>
+</div>
 
-      <div id="arcticleWhite">
-        <div id="textWrap">
+<div id="arcticleWhite">
+  <div id="textWrap">
