Add nice footer box

--- a/html/foot.html
+++ b/html/foot.html
@@ -5,6 +5,12 @@
   </div>
 
   <div id="footer">
+      <div id="footerBox">
+        <p>
+          wildefyr (c) 2016 //
+          <a href="http://wildefyr.net/blog/feed.xml">RSS</a>
+        <p>
+      </div>
   </div>
 
   </body>
