--- a/html/foot.html
+++ b/html/foot.html
@@ -7,7 +7,7 @@
   <div id="footer">
       <div id="footerBox">
         <p>
-          wildefyr (c) 2016 //
+          Wildefyr (c) 2016 //
           <a href="http://wildefyr.net/blog/feed.xml">RSS</a>
         <p>
       </div>
