--- a/html/headmedia.html
+++ b/html/headmedia.html
@@ -13,13 +13,16 @@
 
   <div id="wrap">
     <div id="header">
-      <h3>
-        &nbsp;&nbsp;&nbsp;<a href="/">HOME</a>&nbsp;&nbsp;&nbsp;
-        <a href="/blog">BLOG</a>&nbsp;&nbsp;&nbsp;
-        <a href="/media">MEDIA</a>&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/wildefyr/">CODE</a>&nbsp;&nbsp;&nbsp;
-        <a href="/contact">CONTACT</a>&nbsp;&nbsp;&nbsp;
-      </h3>
+      <div id="textWrap">
+        <ul id="headerList">
+          <h3>
+            <li><a href="/">home</a></li>
+            <li><a href="/blog">blog</a></li>
+            <li><a href="/media">media</a></li>
+            <li><a href="https://github.com/wildefyr">code</a></li>
+          </h3>
+        </ul>
+      </div>
     </div>
 
     <div id="content">
