--- a/html/head.html
+++ b/html/head.html
@@ -19,6 +19,7 @@
             <li><a href="/">home</a></li>
             <li><a href="/blog">blog</a></li>
             <li><a href="/media">media</a></li>
+            <li><a href="/ports">ports</a></li>
             <li><a href="https://github.com/wildefyr">code</a></li>
           </h3>
         </ul>
