update html pages

--- a/html/50x.html
+++ b/html/50x.html
@@ -11,38 +11,38 @@
 
   <body>
     <div id="wrap">
-
-    <div id="header">
-      <div id="textWrap">
-        <ul id="headerList">
-          <h3>
-            <li><a href="/">home</a></li>
-            <li><a href="/blog">blog</a></li>
-            <li><a href="/media">media</a></li>
-            <li><a href="https://github.com/wildefyr">code</a></li>
-          </h3>
-        </ul>
-      </div>
-    </div>
-
-    <div id="content">
-
-      <div id="arcticleTitle">
+      <div id="header">
         <div id="textWrap">
-          <h1>Some kind of server error happened!</h1>
+          <ul id="headerList">
+            <h3>
+              <li><a href="/">home</a></li>
+              <li><a href="/blog">blog</a></li>
+              <li><a href="/media">media</a></li>
+              <li><a href="/ports">ports</a></li>
+              <li><a href="https://github.com/wildefyr">code</a></li>
+            </h3>
+          </ul>
         </div>
       </div>
 
-      <div id="arcticleWhite">
-        <div id="textWrap">
-          <p>
-          If you believe you are receiving this page in error, please contact
-          me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
-          </p>
-        </div>
-      </div>
+      <div id="content">
 
-    </div>
+        <div id="arcticleTitle">
+          <div id="textWrap">
+            <h1>Some kind of server error happened!</h1>
+          </div>
+        </div>
+
+        <div id="arcticleWhite">
+          <div id="textWrap">
+            <p>
+            If you believe you are receiving this page in error, please contact
+            me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
+            </p>
+          </div>
+        </div>
+
+      </div>
     </div>
 
     <div id="footer">
