--- a/html/foot.html
+++ b/html/foot.html
@@ -2,15 +2,16 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div id="footer">
-      <div id="footerBox">
-        <p>
-          Wildefyr (c) 2016 //
-          <a href="http://wildefyr.net/blog/feed.xml">RSS</a>
-        <p>
-      </div>
+    <div id="footer">
+        <div id="footerBox">
+          <p>
+            Wildefyr (c) 2016 //
+            <a href="/blog/feed.xml">RSS</a>
+          <p>
+        </div>
+    </div>
+
   </div>
 
   </body>
