--- a/html/404.html
+++ b/html/404.html
@@ -5,25 +5,23 @@
     <title>wildefyr.net</title>
     <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset=UTF-8>
   </head>
 
   <body>
-    <div id="wrap">
-      <div id="header">
-        <div id="textWrap">
-          <ul id="headerList">
-            <h3>
-              <li><a href="/">home</a></li>
-              <li><a href="/blog">blog</a></li>
-              <li><a href="/media">media</a></li>
-              <li><a href="/ports">ports</a></li>
-              <li><a href="https://github.com/wildefyr">code</a></li>
-            </h3>
-          </ul>
-        </div>
-      </div>
+
+  <div id="wrap">
+    <div id="header">
+      <ul id="headerList">
+        <h3>
+          <a href="/">home</a>
+          <a href="/blog">blog</a>
+          <a href="/media">media</a>
+          <a href="/ports">ports</a>
+          <a href="https://github.com/wildefyr">code</a>
+        </h3>
+      </ul>
+    </div>
 
       <div id="content">
 
