improved http gen to give better html

--- a/ports/index.html
+++ b/ports/index.html
@@ -40,5 +40,5 @@
    <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-02-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-02-24</td></tr>
    <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-02-24</td></tr>
- </body>
-</html>
+  </table>
+  <p><b>40 ports</b></p>
