Add: ports index.html generation

--- a/ports/index.html
+++ b/ports/index.html
@@ -42,3 +42,5 @@
    <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-02-24</td></tr>
   </table>
   <p><b>40 ports</b></p>
+<li><a href=/ports/wildefyr.git>Git Sync</a></li>
+<li><a href=/ports/wildefyr.httpup>Httpup Sync</a></li>
