--- a/ports/index.html
+++ b/ports/index.html
@@ -29,7 +29,7 @@
    <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-02-24</td></tr>
    <tr class="even"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-02-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-02-24</td></tr>
-   <tr class="even"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-02-24</td></tr>
+   <tr class="even"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-03-05</td></tr>
    <tr class="odd"><td><a href="https://github.com/rkitover/vimpager">vimpager</a></td><td><a href="./vimpager/">git-1</a></td><td>Use vim as a pager. (git checkout)</td><td>2016-02-24</td></tr>
    <tr class="even"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-02-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-02-24</td></tr>
@@ -39,8 +39,9 @@
    <tr class="odd"><td><a href="http://hoopajoo.net/projects/xautomation.html">xautomation</a></td><td><a href="./xautomation/">1.09-1</a></td><td>Provides tools like xte to fake xorg input.</td><td>2016-02-24</td></tr>
    <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-02-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-02-24</td></tr>
-   <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-02-24</td></tr>
+   <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-03-05</td></tr>
+   <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-02-24</td></tr>
   </table>
-  <p><b>40 ports</b></p>
+  <p><b>41 ports</b></p>
 <li><a href=/ports/wildefyr.git>Git Sync</a></li>
 <li><a href=/ports/wildefyr.httpup>Httpup Sync</a></li>
