add new meta tag

--- a/html/head.html
+++ b/html/head.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
     <meta charset=UTF-8>
+    <meta name="google-site-verification" content="6zPpqLkqZb_1t_AhIKVfvTil-oum1clGuVKtJiRASXI" />
   </head>
 
   <body>
